# Format

./: CMakeLists.txt  README.md  annotated.html  classes.html  dir_07db626c45ea25c07b7068518579809d.html  dir_07db626c45ea25c07b7068518579809d_dep.dot  dir_07db626c45ea25c07b7068518579809d_dep.map  dir_07db626c45ea25c07b7068518579809d_dep.md5  dir_133e1fca07942656eec957d6e3dbac55.html  dir_133e1fca07942656eec957d6e3dbac55_dep.map  dir_133e1fca07942656eec957d6e3dbac55_dep.md5  dir_1ba1fe75468f5d6eb35fdea30132f6c5.html  dir_1ba1fe75468f5d6eb35fdea30132f6c5_dep.map  dir_1ba1fe75468f5d6eb35fdea30132f6c5_dep.md5  dir_1e57f80b0432630f59ae1f3847188e24.html  dir_1e57f80b0432630f59ae1f3847188e24_dep.map  dir_1e57f80b0432630f59ae1f3847188e24_dep.md5  dir_330721ce6bbd29d903dcf6149fc6dd24.html  dir_330721ce6bbd29d903dcf6149fc6dd24_dep.map  dir_330721ce6bbd29d903dcf6149fc6dd24_dep.md5  dir_35ba0fc37d91f527d5f74a1bf219e74c.html  dir_35ba0fc37d91f527d5f74a1bf219e74c_dep.dot  dir_35ba0fc37d91f527d5f74a1bf219e74c_dep.map  dir_35ba0fc37d91f527d5f74a1bf219e74c_dep.md5  dir_3972ad1744e4914fd4520544e3fe32a8.html  dir_3972ad1744e4914fd4520544e3fe32a8_dep.map  dir_3972ad1744e4914fd4520544e3fe32a8_dep.md5  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_507acf48ac41e7159f0a1b442db86079.html  dir_59c62c22e07b37fbb36a32a7197f962a.html  dir_85765867c4ca5aaef0a6ffe8f5f6276b.html  dir_85765867c4ca5aaef0a6ffe8f5f6276b_dep.map  dir_85765867c4ca5aaef0a6ffe8f5f6276b_dep.md5  dir_9165eb83fa9577721ec0c89f50d06ca3.html  dir_9ee21d303bd6bb513c1c0519bbdd578a.html  dir_9ee21d303bd6bb513c1c0519bbdd578a_dep.map  dir_9ee21d303bd6bb513c1c0519bbdd578a_dep.md5  dir_a306b7cc5167c29e131a00bfce4c6187.html  dir_a948842fa98f12679c5b270b3cb08c8f.html  dir_b7219c07da010699497b78aa52d78f4d.html  (+58 more)
d0/d4a/: structFormat_1_1BaseEncode_1_1Exception__inherit__graph.dot  structFormat_1_1BaseEncode_1_1Exception__inherit__graph.map  structFormat_1_1BaseEncode_1_1Exception__inherit__graph.md5
d0/dde/: classStream_1_1Format_1_1Base__inherit__graph.map  classStream_1_1Format_1_1Base__inherit__graph.md5
d0/dfd/: classFormat_1_1Dot__inherit__graph.dot  classFormat_1_1Dot__inherit__graph.map  classFormat_1_1Dot__inherit__graph.md5
d1/d01/: classStream_1_1Format_1_1BaseEncode-members.html
d1/d55/: Dot_8h_source.html
d1/d8b/: classFormat_1_1String__inherit__graph.dot  classFormat_1_1String__inherit__graph.map  classFormat_1_1String__inherit__graph.md5
d1/d91/: classFormat_1_1BaseEncode.html
d1/d9f/: classStream_1_1Format_1_1StringInput.html
d1/dc1/: classFormat_1_1StringOutput.html
d1/def/: structstd_1_1is__error__code__enum_3_01Format_1_1Base_1_1Exception_1_1Code_01_4.html
d1/df1/: classFormat_1_1StringInput.html
d2/d12/: classStream_1_1Format_1_1DotOutput-members.html
d2/d1f/: structStream_1_1Format_1_1BaseDecode_1_1Exception.html
d2/d35/: classFormat_1_1DotOutput__inherit__graph.dot  classFormat_1_1DotOutput__inherit__graph.map  classFormat_1_1DotOutput__inherit__graph.md5
d2/d58/: classStream_1_1Format_1_1String__inherit__graph.map  classStream_1_1Format_1_1String__inherit__graph.md5
d2/d63/: classStream_1_1Format_1_1StringOutput-members.html
d2/d8d/: classFormat_1_1Dot-members.html
d2/dee/: structstd_1_1is__error__code__enum_3_01Format_1_1String_1_1Exception_1_1Code_01_4__inherit__graph.dot  structstd_1_1is__error__code__enum_3_01Format_1_1String_1_1Exception_1_1Code_01_4__inherit__graph.map  structstd_1_1is__error__code__enum_3_01Format_1_1String_1_1Exception_1_1Code_01_4__inherit__graph.md5
d2/df0/: structFormat_1_1StringInput_1_1Exception.html
d3/d00/: structStream_1_1Format_1_1Base_1_1Exception.html
d3/d20/: structStream_1_1Format_1_1BaseEncode_1_1Exception__inherit__graph.map  structStream_1_1Format_1_1BaseEncode_1_1Exception__inherit__graph.md5
d3/d23/: structFormat_1_1String_1_1CaseInsensitiveEqualTo.html
d3/d2f/: classFormat_1_1Dot.html
d3/d4e/: classStream_1_1Format_1_1Dot__inherit__graph.map  classStream_1_1Format_1_1Dot__inherit__graph.md5
d3/d52/: classFormat_1_1BaseDecode.html
d3/d5f/: classFormat_1_1String-members.html
d3/db2/: Base_8hpp_source.html
d3/dd1/: classStream_1_1Format_1_1DotOutput.html
d4/d34/: structStream_1_1Format_1_1BaseDecode_1_1Exception__inherit__graph.map  structStream_1_1Format_1_1BaseDecode_1_1Exception__inherit__graph.md5
d4/d36/: classStream_1_1Format_1_1BaseEncode__inherit__graph.map  classStream_1_1Format_1_1BaseEncode__inherit__graph.md5
d4/d4e/: structStream_1_1Format_1_1BaseContext.html
d4/d76/: structFormat_1_1Base_1_1Exception.html
d4/dbc/: structFormat_1_1String_1_1CaseInsensitiveEqualTo-members.html
d4/dce/: structStream_1_1Format_1_1BaseEncode_1_1Exception.html
d4/de4/: structFormat_1_1Base_1_1Exception-members.html
d4/deb/: classFormat_1_1Base__inherit__graph.dot  (+2 more)
doc/: doxygen.cfg
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  concepts_0.js  functions_0.js  functions_8.js  namespaces_0.js  searchdata.js
src/: Base.cpp  Dot.cpp  String.cpp  String.hpp  String.tpp
test/: CMakeLists.txt
test/Base/: CMakeLists.txt
test/Base/src/: Base_00.cpp
test/String/: CMakeLists.txt
test/String/src/: Float.cpp  Integer.cpp  Line.cpp  String_00.cpp
test/src/: Base_00.cpp
(+121 files in other folders)
